Note where I do a deliberately hacky thing for future use

--- a/scrape.ipynb
+++ b/scrape.ipynb
@@ -257,6 +257,8 @@
    },
    "outputs": [],
    "source": [
+    "# NOTE: This is a hack. There are two \"prefixes\" in the url scheme for the collection\n",
+    "# To get all OCR files, you have to run this for loop twice once with \"as\" and once with \"mc\"\n",
     "for id in all_ids_flat:\n",
     "    if id[:2] == \"as\":\n",
     "        url = f\"https://ocr.lib.ncsu.edu/ocr/as/{id}/{id}.txt\"\n",
